[package]
name = "rustvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = "0.4.3"
# rand = "0.8.5"
aes-gcm = "0.10.3"
clap = { version = "4.5.4", features = ["derive"] }
sha2 = "0.10"
arboard = "3.4.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
